<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_facebook_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:buttonTint="@android:color/holo_blue_light"
            android:text="@string/facebook_url"/>

        <RadioButton
            android:id="@+id/rb_facebook_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:buttonTint="@android:color/holo_blue_light"
            android:text="@string/facebook_share_url"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/facebook_url_title" />

    <EditText
        android:id="@+id/edt_facebook_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_facebook"
        android:textCursorDrawable="@android:color/holo_blue_light"
        android:inputType="textUri"
        android:maxLines="1"
        android:minLines="1"
        android:padding="10dp"
        android:background="@drawable/round_edttxt"/>

</LinearLayout>
