<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/phone_title" />

    <EditText
        android:id="@+id/edt_sms_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:textCursorDrawable="@android:color/holo_blue_light"
        android:inputType="phone"
        android:maxLines="1"
        android:minLines="1"
        android:padding="10dp"
        android:background="@drawable/round_edttxt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/sms_message" />

    <EditText
        android:id="@+id/edt_sms_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@android:color/holo_blue_light"
        android:maxLines="4"
        android:nestedScrollingEnabled="true"
        android:padding="10dp"
        android:background="@drawable/round_edttxt"/>

</LinearLayout>
