<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button
        android:id="@+id/btn_dialog_scan_again"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:padding="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="#dedede"
        android:text="@string/dialog_scan_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_dialog_copy"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:padding="8dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="#dedede"
        android:text="@string/dialog_copy"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_dialog_scan_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dialog_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:maxLines="6"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="sdgsdgsdgsdgsdgsgsgss" />

    <TextView
        android:id="@+id/tv_dialog_bar_code_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/colorBlack"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_result" />

    <Button
        android:id="@+id/btn_dialog_visit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="#dedede"
        android:text="@string/dialog_visit"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_bar_code_type" />

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="#dedede"
        android:gravity="center"
        android:text="@string/dialog_cancel"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_dialog_visit"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_bar_code_type"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>

