<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/event_title" />

    <EditText
        android:id="@+id/edt_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@android:color/holo_blue_light"
        android:inputType="text"
        android:maxLines="1"
        android:minLines="1"
        android:padding="10dp"
        android:background="@drawable/round_edttxt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/location" />

    <EditText
        android:id="@+id/edt_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@android:color/holo_blue_light"
        android:inputType="text"
        android:maxLines="1"
        android:minLines="1"
        android:padding="10dp"
        android:background="@drawable/round_edttxt"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginRight="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/event_start_time" />

            <TextView
                android:id="@+id/tv_event_start_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@drawable/round_edttxt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/event_end_time" />

            <TextView
                android:id="@+id/tv_event_end_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:background="@drawable/round_edttxt" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
